openshift/oc-yaml/db-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: db
  namespace: voting-app-prd
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    name: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: db
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - redis
            topologyKey: "kubernetes.io/hostname"
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: db
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: db
            - name: POSTGRESQL_DATABASE
              valueFrom:
                secretKeyRef:
                  key: database-name
                  name: db
          image: docker-registry.default.svc:5000/openshift/postgresql
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            capabilities: {}
            privileged: false
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: db-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - db
        from:
          kind: ImageStreamTag
          name: 'postgresql:9.6'
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
