openshift/oc-yaml/result-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: result
  namespace: voting-app-prd
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    name: result
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        name: result
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - db
            topologyKey: "kubernetes.io/hostname"
      containers:
        - image: docker-registry.default.svc:5000/voting-app-prd/result
          imagePullPolicy: IfNotPresent
          name: result
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - result
        from:
          kind: ImageStreamTag
          name: 'result:latest'
          namespace: voting-app-prd
      type: ImageChange
    - type: ConfigChange
