openshift/oc-yaml/worker-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: worker
  namespace: voting-app-prd
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    name: worker
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        name: worker
    spec:
      containers:
        - image: docker-registry.default.svc:5000/voting-app/worker
          imagePullPolicy: IfNotPresent
          name: worker
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - worker
        from:
          kind: ImageStreamTag
          name: 'worker:latest'
          namespace: voting-app-prd
      type: ImageChange
    - type: ConfigChange
