openshift/oc-yaml/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting-app-prd
spec:
  ports:
    - name: db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: db
  type: ClusterIP
