openshift/oc-yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app-prd
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    name: redis
  type: ClusterIP
