openshift/oc-yaml/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-app-prd
spec:
  ports:
    - name: 8080-tcp
      nodePort: 31000
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: vote
  type: NodePort
