openshift/oc-yaml/result-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: result
  namespace: voting-app-prd
spec:
  podSelector:
    matchLabels:
      name: result
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
    ports:
    - protocol: TCP
      port: 8080
